--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 support delete zone and record from powerdns database
   - work around -> force down
 watcher manager
+api key base authentication for watcher
